[gd_scene load_steps=11 format=3 uid="uid://rhecnptcim0j"]

[ext_resource type="Script" uid="uid://chc5it6p0ot1p" path="res://breakable.gd" id="1_co8vc"]
[ext_resource type="Texture2D" uid="uid://b7146c2e7epf" path="res://assets/trashcan-Sheet.png" id="1_fx101"]
[ext_resource type="Script" uid="uid://co8oqa05uq0n0" path="res://flippable_sprite.gd" id="2_co8vc"]
[ext_resource type="PackedScene" uid="uid://dijioq58keg5t" path="res://hurtbox_component.tscn" id="3_wh3et"]
[ext_resource type="PackedScene" uid="uid://4t60jr6i5bnr" path="res://flippable_shape.tscn" id="4_pwmp8"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_minte"]
size = Vector2(25, 25)

[sub_resource type="Animation" id="Animation_hg5ff"]
resource_name = "damage"
length = 0.41666836
step = 0.016666668
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position_x_offset")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.083333336, 0.16666667, 0.25, 0.33333334),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [-8.0, 8.0, -4.0, 2.0, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position_y_offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"update": 0,
"values": []
}

[sub_resource type="Animation" id="Animation_fx101"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FlippableSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("FlippableSprite:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("FlippableSprite:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:position_x_offset")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-8.0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".:position_y_offset")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("hurtbox_component/flippable_shape:disabled")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_co8vc"]
resource_name = "break"
length = 1.0333351
step = 0.016666668
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FlippableSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("FlippableSprite:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.06666667, 0.13333334, 0.2, 0.2657156, 0.33238226, 0.39904892, 0.4657156, 0.5336771, 0.60034376, 0.6670104, 0.7336771, 0.7993927, 0.86605936, 0.932726, 0.9993927),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [true, false, true, false, true, false, true, false, true, false, true, false, true, false, true, false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("FlippableSprite:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0.83137256)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:position_x_offset")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1.0333333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [-8.0, 200.0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".:position_y_offset")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.51666665, 1),
"transitions": PackedFloat32Array(0.5, 2, 1),
"update": 0,
"values": [0.0, -25.0, 0.0]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("hurtbox_component/flippable_shape:disabled")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qlsws"]
_data = {
&"RESET": SubResource("Animation_fx101"),
&"break": SubResource("Animation_co8vc"),
&"damage": SubResource("Animation_hg5ff")
}

[node name="breakable" type="Node2D"]
scale = Vector2(2, 2)
script = ExtResource("1_co8vc")
health = 10
position_x_offset = -8.0

[node name="FlippableSprite" type="Sprite2D" parent="."]
texture = ExtResource("1_fx101")
hframes = 2
script = ExtResource("2_co8vc")
metadata/_custom_type_script = "uid://co8oqa05uq0n0"

[node name="hurtbox_component" parent="." node_paths=PackedStringArray("flippable_sprite", "parent") instance=ExtResource("3_wh3et")]
flippable_sprite = NodePath("../FlippableSprite")
parent = NodePath("..")

[node name="flippable_shape" parent="hurtbox_component" node_paths=PackedStringArray("flippable_sprite") instance=ExtResource("4_pwmp8")]
position = Vector2(0, 6)
shape = SubResource("RectangleShape2D_minte")
debug_color = Color(0, 0.55536246, 0.9003438, 0.41960785)
flippable_sprite = NodePath("../../FlippableSprite")
default_position = Vector2(0, 6)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_qlsws")
}

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
